[package]
name = "frontier-template-runtime"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/purestake/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
frame-support = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
frame-system = { version = "3.0.0-dev", default-features = false, package = "frame-system", git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
frame-system-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }

pallet-ethereum = { version = "0.1.0", default-features = false, path = "../../frame/ethereum" }
pallet-evm = { version = "3.0.0-dev", default-features = false, path = "../../frame/evm" }
pallet-evm-precompile-simple = { version = "3.0.0-dev", default-features = false, path = "../../frame/evm/precompile/simple" }
pallet-evm-precompile-sha3fips = { version = "3.0.0-dev", default-features = false, path = "../../frame/evm/precompile/sha3fips" }
pallet-aura = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
pallet-balances = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
pallet-grandpa = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
pallet-randomness-collective-flip = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
pallet-sudo = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
pallet-timestamp = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
pallet-transaction-payment = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }

sp-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-block-builder = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7"}
sp-consensus-aura = { version = "0.9.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-core = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-inherents = { default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7"}
sp-io = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-offchain = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-runtime = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-session = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-std = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-transaction-pool = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }
sp-version = { version = "3.0.0-dev", default-features = false, git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }

fp-rpc = { default-features = false, path = "../../primitives/rpc" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/purestake/substrate.git", branch = "moonbeam-v0.7" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
